--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ANTLER</title>
     <!--Font Awesome-->
     <link href="css/all.min.css" rel="stylesheet">
@@ -87,7 +88,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link active hover-item-parent" aria-current="page" href="#">Home <span class="badge bg-danger">New</span>
                               <ul class="hover-menu">  
                                 <li><a href="#"> List Item</a></li>
@@ -96,7 +97,7 @@
                                 <li><a href="#"> List Item</a></li>
                               </ul>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">Hosting <span class="badge bg-danger">Pro</span></a>
                         </li>
