fixed display issue with the (why us) section

--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
         </div><!--/why-fluid-->
         <div class="container">
           <div class="row why">
-            <div class="col-md-4 why-item" data-aos="fade-up" data-aos-duration="1000">
+            <!--data-aos="fade-up" data-aos-duration="1000"-->
+            <div class="col-md-4 col-sm-4 why-item">
               <div class="why-item-img">
                 <img src="images/customerService.svg" alt="">
               </div>
@@ -406,7 +407,8 @@
                 <button type="button" class="btn">Read More</button>
               </div>
             </div>
-            <div class="col-md-4 why-item" data-aos="fade-up" data-aos-duration="1500">
+            <!--data-aos="fade-up" data-aos-duration="1500"-->
+            <div class="col-md-4 col-sm-4 why-item">
               <div class="why-item-img">
                 <img src="images/freePanal.svg" alt="">
               </div>
@@ -421,7 +423,8 @@
                 <button type="button" class="btn">Read More</button>
               </div>
             </div>
-            <div class="col-md-4 why-item" data-aos="fade-up" data-aos-duration="2000">
+            <!--data-aos="fade-up" data-aos-duration="2000"-->
+            <div class="col-md-4 col-sm-4 why-item">
               <div class="why-item-img">
                 <img src="images/performance.svg" alt="">
               </div>
